2022-03-20 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/gen.c,
	  support/regression/tests/bug-2368.c,
	  support/regression/tests/bug-2770.c,
	  support/regression/tests/bug-3231.c,
	  support/regression/tests/bug3440327.c,
	  support/regression/tests/cse.c,
	  support/regression/tests/gcc-torture-execute-20021118-1.c,
	  support/regression/tests/gcc-torture-execute-20040707-1.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/malloc.c,
	  support/regression/tests/memory.c,
	  support/regression/tests/preserves_regs.c,
	  support/regression/tests/structparam.c:
	  struct parameters for pdk (--stack-auto only).

2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/pdk/ralloc2.cc,
	  src/stm8/ralloc2.cc,
	  src/z80/ralloc2.cc,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-920625-1.c:
	  Fix a register allocation issue affecting calls to functions with multiple struct parameters.

2022-03-19 Philipp Klaus Krause <krauseph AT infromatik.uni-freiburg.de>

	* src/SDCC.y,
	  src/SDCCcse.c,
	  src/SDCCicode.c,
	  src/SDCCicode.h,
	  src/pdk/gen.c,
	  src/stm8/gen.c,
	  src/z80/gen.c,
	  support/regression/tests/gcc-torture-execute-20021118-1.c,
	  support/regression/tests/gcc-torture-execute-20050713-1.c,
	  support/regression/tests/gcc-torture-execute-20180131-1.c,
	  support/regression/tests/gcc-torture-execute-pr67226.c,
	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-struct-ret-1.c,
	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
	  support/regression/tests/structparam.c:
	  Rewrite struct parameter support to fix bug #3365.
